@@ -1,3 +1,9 @@
+2022-02-27 Gabriele Gorla <gorlik@yahoo.com>
+
+	* sdcc/src/mos6502/ralloc.c,
+	  sdcc/src/mos6502/gen.c:
+	  Revert changes in slew() which caused regression failures on z80 ports.
+
 2022-02-26 Gabriele Gorla <gorlik@yahoo.com>
 
 	* sdcc/sdas/asxxsrc/aslist.c:
